src/features/DisplayControls/NursingTasks/styles/UpdateNursingTasks.scss
.update-nursing-tasks {
  padding: 0 20px 120px;
  color: #393939;
  display: flex;
  flex-direction: column;
  gap: 16px;
  .task-heading {
    display: flex;
    align-items: center;
    gap: 4px;
  }
  .medication-name {
    display: flex;
    align-items: center;
    font-weight: 500;
    line-height: 1.5;
    gap: 6px;
    .name {
      text-align: left;
      display: -webkit-box;
      -webkit-box-orient: vertical;
      -webkit-line-clamp: 2;
      overflow: hidden;
    }
  }
  .red-text {
    color: #ff0000;
  }
  .medication-details {
    font-size: 12px;
  }
  .nursing-task-section {
    background-color: #f4f4f4;
    padding: 10px;
    display: flex;
    flex-direction: column;
    gap: 6px;
  }
  .bx--toggle-input--small + .bx--toggle-input__label > .bx--toggle__switch {
    margin-top: 0;
  }
  .error {
    color: #ff0000;
    font-size: 12px;
    padding-top: 4px;
  }
  .notes-text-area {
    margin: 0 10px;
    textarea {
      padding: 0.6rem 1rem;
    }
  }
  .overflowMenu {
    position: absolute;
    margin: -8px !important;
    right: 30px;
    &:disabled {
      opacity: 0.4;
    }
  }
  hr {
    margin: 0;
  }
}
.bx--overflow-menu-options {
  z-index: 10000;
}

.tile-subcontent {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 0.6rem;
}

